[project]
name = "soar-sml"
description = "Raw SML Bindings to the Soar Cognitive Architecture"
version = "9.6.2"
license = "BSD"
authors = [
    # {name = "Author Name", email = "authoremail@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["soar"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
compat = ["soar-compat"]

[build-system]
requires = [
    # "enscons",
    # we use a forked enscons to add python 3.12 support
    "enscons @ git+https://github.com/ShadowJonathan/enscons-soar@08df06b",

    "toml>=0.1",
    "wheel",
    "scons==4.4.0"
]
build-backend = "enscons.api"

[tool.enscons]
build-from = "../../../"

[tool.cibuildwheel]
build-verbosity = 3
skip = [
    # Skip PyPy: Build works, but does not properly work at runtime.
    "pp*",
    # Skip 32-bit Windows: scons does not properly build 32-bit version,
    #  and linkage problems occur.
    "*-win32",
    # Skip MUSL (as opposed to GLIB) linux, due to unknown concurrency symbols.
    "*-musllinux_*"
]
test-command = """\
python -c "import soar_sml;\
k=soar_sml.Kernel.CreateKernelInNewThread();\
a=k.CreateAgent('soar');\
assert(a.ExecuteCommandLine('echo hello world').strip()=='hello world')"
"""

# Skip testing python 3.8 on ARM64. This is due to a limitation with cibuildwheel:
# https://github.com/pypa/cibuildwheel/pull/1169#issuecomment-1178727618
test-skip = "cp38-macosx_*:arm64"

[tool.cibuildwheel.linux]
repair-wheel-command = """\
LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/project/out auditwheel repair -w {dest_dir} {wheel}\
"""

[tool.cibuildwheel.macos]
before-build = "rm -rf build/"
